--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "generate:pwa": "npx pwa-asset-generator ./public/icon.svg ./docs/icons --icon-only --splash-only --opaque false --padding \"0%\"",
     "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
@@ -14,6 +15,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "material-icons": "^1.13.12",
+    "pwa-asset-generator": "^6.3.1",
     "sanitize-html": "^2.11.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
@@ -33,6 +35,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.10",
+    "vite-plugin-pwa": "^0.18.1",
     "vitest": "^1.0.4"
   }
 }
