--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "generate:pwa": "npx pwa-asset-generator ./public/icon.svg ./docs/icons --icon-only --splash-only --opaque false --padding \"0%\"",
+    "generate:pwa": "npx pwa-asset-generator ./public/icons/logo.svg ./docs/icons --icon-only --splash-only --opaque false --padding \"0%\"",
     "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
